# bullshitdetector

./: .gitignore  Cargo.toml  HOW_TO_USE_PUBLISHED_CRATE.md  PUBLISHING_GUIDE.md  README.md  magic_numbers_scan_20251118_061203.txt
src/: dataset.rs  detect.rs  feeler.rs  gp.rs  hyperbolic.rs  integrate.rs  lib_full.rs.backup  lib_minimal.rs  lsp.rs  magic_numbers.rs  main.rs  main_full.rs.backup  main_minimal.rs  memory.rs  qwen_client.rs  rag.rs  suggest.rs  topology_engine.rs
