[package]
name = "bullshitdetector"
version = "0.1.0"  # Start with 0.1.0 for first release
edition = "2021"
authors = ["Jason Van Pham (ruffian-l) <your-email@example.com>"]
description = "Blazing-fast pattern detector for magic numbers, hardcoded values, and code smells using regex and golden-ratio math"
license = "MIT"
repository = "https://github.com/Ruffian-L/niodoo-tcs"
homepage = "https://github.com/Ruffian-L/niodoo-tcs"
documentation = "https://docs.rs/bullshitdetector"
readme = "README.md"
keywords = ["linter", "code-quality", "static-analysis", "magic-numbers", "refactoring"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["data/*", "models/*", "*.txt"]

[[bin]]
name = "bullshitdetector"
path = "src/main.rs"

[dependencies]
# Core dependencies only - minimal version for crates.io
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"

[dev-dependencies]
criterion = "0.5"